winter-test/src/test/mods/io.winterframework.test.error.moduleG/io/winterframework/test/error/moduleG/BeanB.java
package io.winterframework.test.error.moduleG;

import io.winterframework.core.annotation.Bean;

@Bean(name="beanA")
public class BeanB {
	
	public BeanB() {
	}
	
}
